# MO1-Opesy

./: CMakeLists.txt  README.md  README.txt  blueprint.txt  config.txt
MO1 Opesy/: CMakeLists.txt  MO1 Opesy.cpp  MO1 Opesy.h
src/: CMakeLists.txt  main.cpp  menu.h
src/cli/: Console.cpp  Console.h  ScreenView.cpp  ScreenView.h
src/core/: CPUCore.cpp  CPUCore.h  Config.cpp  Config.h
src/process/: Process.cpp  Process.h
src/scheduler/: Scheduler.cpp  Scheduler.h
